--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "import:recipes": "tsx scripts/import-recipes.ts",
+    "check:recipes": "tsx scripts/check-recipes.ts"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.1.8",
+    "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-persist-client": "^5.90.19",
+    "@types/node": "^25.0.8",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.31",
     "expo-blur": "^15.0.8",
     "expo-constants": "~18.0.13",
@@ -32,11 +39,13 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "ts-node": "^10.9.2",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
     "react-test-renderer": "19.1.0",
+    "tsx": "^4.21.0",
     "typescript": "~5.9.2"
   },
   "private": true
