--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "import:recipes": "tsx scripts/import-recipes.ts",
-    "check:recipes": "tsx scripts/check-recipes.ts"
+    "check:recipes": "tsx scripts/check-recipes.ts",
+    "test:image-setup": "tsx scripts/test-image-setup.ts",
+    "populate:images": "tsx scripts/populate-recipe-images.ts",
+    "populate:images:all": "tsx scripts/populate-recipe-images.ts --start=0 --end=271"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -40,6 +43,7 @@
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "ts-node": "^10.9.2",
+    "unsplash-js": "^7.0.20",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
